--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,11 @@
 /* Navigation bar on top */
 .navbar {
     height: 80px;
+    width: 100%;
     align-items: center;
     display: flex;
     justify-content: center;
-    position: sticky;
+    position: fixed;
     top: 0;
     padding-left: 1rem;
     height: 7rem;
@@ -71,6 +72,8 @@
     height: 1px;
     width: 100%;
     position: fixed;
+    top: 111px;
+    z-index: 24001;
 }
 
 .vertical-line {
@@ -85,7 +88,7 @@
 
 /* Sidebar menu */
 .menu {
-    margin-top: 1px;
+    margin-top: 7rem;
     width: 17rem;
     display: grid;
     position: fixed;
@@ -113,7 +116,7 @@
 
 
 /* Mobile response for menu */
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 768px) {
     .burger {
         width: 2rem;
     }
@@ -149,9 +152,8 @@
     justify-content: center;
     width: 1000px;
     gap: 2rem;
-    /* margin-left: 17rem; */
     position: absolute;
-    left: 17rem;
+    left: 12rem;
     top: 9rem;
 }
 
@@ -162,36 +164,36 @@
     flex-direction: column;
     align-items: center; 
     justify-content: space-evenly;
-    width: 440px;
-    height: 330px;
+    width: 360px;
+    height: 290px;
     border: 1px solid gray;
     border-radius: 8px;
 }
 
-#line_month {
+#line_ov_box {
     background-color: gray;
     height: 1px;
-    width: 162%;
+    width: 360px;
     justify-self: center;
-    margin-top: 5px;
 }
 
 #stats_text {
-    font-size: 36px;
+    font-size: 30px;
     color: gray;
+    margin-top: 4px;
 }
 
 .inc_exp_box_container {
-    width: 390px;
-    height: 150px;
+    width: 350px;
+    height: 110px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .ov_box {
-    width: 190px;
-    height: 140px;
+    width: 150px;
+    height: 100px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -207,23 +209,23 @@
 }
 
 .ov_text h1 {
-    font-size: 30px;
+    font-size: 20px;
     color: gray;
 }
 
 .ov_text h2 {
-    font-size: 48px;
+    font-size: 38px;
     color: gray;
 }
 
 #net_box_container {
     margin-top: 0;
     height: 75px;
-    width: 390px;
+    width: 310px;
 }
 
 #net_text_container {
-    width: 200px;
+    width: 180px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -231,7 +233,11 @@
 }
 
 #net_text_container h2 {
-    font-size: 42px;
+    font-size: 40px;
+}
+
+#net_text_container h1 {
+    font-size: 26px;
 }
 
 @media screen and (max-width: 1234px) {
