--- a/styles.css
+++ b/styles.css
@@ -189,39 +189,36 @@ body {
 .main_section {
     grid-area: main;
     display: grid;
-    grid-template-columns: 17rem 17rem;
-    grid-template-rows: 17rem auto;
+    grid-template-columns: 365px 365px auto;
+    grid-template-rows: 18rem 25rem auto;
+    padding: 2rem;
+    gap: 1rem;
     grid-template-areas: 
-        "month_stats month_stats"
+        "month_stats year_stats"
         "net_graph net_graph";
 }
 
 /* Month and year section */
 
-/* Month + Year div */
-
-.month_and_year_stats_container {
-    grid-area: month_stats;
-    flex-wrap: wrap; 
-    justify-content: center;
-    display: flex;
-    width: 752px;
-    height: 290px;
-    margin-left: 2rem;
-    margin-top: 2rem;
-    gap: 2rem;
-}
-
 /* Monthly expenditure box */
 
+
+#month_stats_box_container {
+    grid-area: month_stats;
+}
+
+#year_stats_box_container {
+    grid-area: year_stats;
+}
 
 .ov_box_container {
     display: flex;
     flex-direction: column;
     align-items: center; 
     justify-content: space-evenly;
+    place-self: center;
     width: 360px;
-    height: 290px;
+    height: 280px;
     border: 1px solid gray;
     border-radius: 8px;
 }
@@ -252,6 +249,7 @@ body {
     height: 100px;
     justify-content: center;
     align-items: center;
+    place-self: center;
     display: flex;
     border: 1px solid gray;
     border-radius: 8px;
@@ -333,20 +331,32 @@ body {
 /* Graph for income and expenses */
 
 .graph_container {
-    grid-area: main;
-    margin-top: 22rem;
-    width: 700px;
+    grid-area: net_graph;
+    place-self: center;
+    width: 740px;
     height: 400px;
     border-radius: 6px;
     border-color: gray;
     border: 1px gray solid;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 #graph {
-    left: 17rem;
+    width: 90%;
+    max-width: 90%;
+    /* height: 400px; */
+    max-height: 320px;
+}
+
+.graph_container h1 {
+    color: gray;
+}
+
+.graph_line {
     width: 100%;
-    height: 400px;
+    height: 1px;
+    background-color: gray;
 }
